--- a/versi 1/index.html
+++ b/versi 1/index.html
@@ -35,11 +35,76 @@
     <div id="portofolio">
         <h1 class="title-portofolio">Foto Produk</h1>
         <div class="container">
-            <img src="./Bahan/Foto/gambar 1.jpeg" alt="" class="img-portfolio">
-            <img src="./Bahan/Foto/gambar 2.jpeg" alt="" class="img-portfolio">
-            <img src="./Bahan/Foto/gambar 3.jpeg" alt="" class="img-portfolio">
-            <img src="./Bahan/Foto/gambar 4.jpeg" alt="" class="img-portfolio">
-            <img src="./Bahan/Foto/gambar 5.jpeg" alt="" class="img-portfolio">
+            <div class="gambar menu">
+                <img src="./Bahan/Foto/gambar 1.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi"><u>Dimsum ayam 5 toping (tuna,sosis,jamur,kepiting,wortel)</u><br>
+                    <br>
+                    Dimsum dgn kualitas terbaik dengan bahan² kualitas premium non MSG cocok utk segala usia,<br>
+                    terutama untuk anak². Bisa untuk cemilan dan bekal sekolah buah hati tercinta.<br>
+                    <br>
+                    Terbuat dari : Dada fillet ayam fresh (non kulit), kulit dimsum dll.</p>
+            </div>
+           <br>
+           <br>
+           <br>
+            <div class="gambar menu">
+                <img src="./Bahan/Foto/gambar 2.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi"><u>Kekian Nori (Rumput Laut)</u><br>
+                    <br>
+                    Olahan ayam dibalut rumput laut ditambah bumbu rempah yang sangat menggugah selera<br>
+                    dapat disajikan  sebagai cemilan dan lauk untuk berbagai macam usia. Non MSG<br>
+                    <br>
+                    Terbuat dari : bahan dasar olahan dimsum, telur,<br> 
+                    rumput laut (sebagai kulit pembungkus), rempah² dll.</p>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="gambar menu">
+                <img src="./Bahan/Foto/gambar 3.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi"><u>Dimsum Udang</u><br>
+                    <br>
+                    Udang yg dibalut dengan olahan dimsum sangat digemari pencinta Sea Food. Non MSG.<br>
+                    <br>
+                    Terbuat dari : Bahan dasar Dimsum, Udang, kulit Dimsum dll.</p>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="gambar menu">
+                <img src="./Bahan/Foto/gambar 4.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi"><u>Kekian Lumpia Kulit Tahu</u><br>
+                    <br>
+                    Lumpia yg bisa disajikan dengan cara dikukus atau digoreng.<br>
+                    Rasanya yg sangat diminati oleh semua usia bisa disajikan sebagai<br> 
+                    cemilan dan lauk. Non MSG.<br>
+                    <br>
+                    Terbuat dari : Olahan dasar dimsum, sayuran, kulit tahu dll.</p>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="gambar menu">
+                <img src="./Bahan/Foto/gambar 5.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi"><u>Dimsum Nuget</u><br> 
+                    <br>
+                    Produk olahan dimsum berbentuk nuget sangat dicocok sebagai lauk untuk anak².<br>
+                    Disajikan dengan cara digoreng sangat digemari oleh anak². Non MSG<br>
+                    <br>
+                    Terbuat dari : Bahan dasar olahan dimsum, telur, tepung panir dll.</p>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="gambar menu">
+                <img src="./Bahan/Foto/gambar 6.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi"><u>Dimsum Nori</u><br> 
+                    <br>
+                    Dimsum yang dibalut dengan nori (rumput laut) sangat digemari oleh anak².<br> 
+                    Bisa untuk bekal sekolah anak. Non MSG<br>
+                    <br>
+                    Terbuat dari : Olahan dasar Dimsum, rumput laut (kulit pembungkus dimsum) dll</p>
+            </div>
         </div>
     </div>
     <hr>
@@ -62,12 +127,12 @@
         </form>
         <div class="contact-info">
             <h3 class="non-desktop">
-                Ketuk salah satu untuk mendapat info
+                Klik salah satu untuk mendapat info
             </h3>
             <div>
-                <a href="tel:123-456-7890" class="contact-icon-bundler">
+                <a href="https://wa.link/vxmec3" class="contact-icon-bundler">
                     <img src="./Bahan/Foto/png-transparent-white-telephone.png" alt="phone.png" class="contact-icon">
-                    <span class="contact-desktop">+62 812-8648-348</span>
+                    <span class="contact-desktop">+62 812-8648-348 ( Order Disini )</span>
                 </a>
             </div>
             <div>
