--- a/versi 1/index.html
+++ b/versi 1/index.html
@@ -3,107 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Dimsum</title>
+    <title>Website Dimsum Boenda Dewi</title>
     <link rel="stylesheet" href="./Dimsum.css">
     <link href="" rel="stylesheet">
 </head>
 <body>
     <div id="landing-page">
         <h1 class="welcome-text">Selamat Datang<br>
-        Di Website Dimsum Bunda Dewi</h1>
+        Di Website Dimsum Boenda Dewi</h1>
     </div>
     <ul class="nav">
         <li class="nav-icon desktop"><img src="./Bahan/Foto/logo dimsum.png" alt="iconAvatar.svg"></li>
         <li><a href="#about-me">Tentang Kami</a></li>
-        <li><a href="#portofolio">Foto Produk</a></li>
+        <li><a href="#portofolio">Jenis Produk</a></li>
         <li><a href="#contact-us">Kontak Kami</a></li>
     </ul>
     <div id="about-me">
         <div class="section-introduction">
             <img src="./Bahan/Foto/logo dimsum.png" alt="iconAvatar.svg" class="img-icon">
-            <p class="content-perkenalan">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione sapiente laborum dolores doloremque minus quis, soluta repudiandae necessitatibus adipisci esse dolore? Dolore necessitatibus itaque ad deleniti a doloremque, esse nemo.</p>
-        </div>
-        <div class="section-education">
-            <img src="./Bahan/Foto/logo dimsum.png" alt="iconAvatar.svg" class="img-icon">
-            <p class="content-perkenalan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius velit provident beatae omnis, rem exercitationem error voluptatibus aliquam animi voluptate corrupti et ipsum ullam natus, quaerat nesciunt veritatis culpa ipsa!</p>
-        </div>
-        <div class="section-working">
-            <img src="./Bahan/Foto/logo dimsum.png" alt="iconAvatar.svg" class="img-icon">
-            <p class="content-perkenalan">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat enim alias sed, beatae perferendis ab ea molestias eius cupiditate! Aut, placeat sit quia magni accusamus nulla consectetur deleniti modi assumenda?</p>
+            <p class="content-perkenalan">Dimsum berbahan dasar premium ini terdiri dari 
+                olahan daging ayam dada fillet yang berasal dari ayam segar (non kulit), 
+                dibalut kulit dimsum, rumput laut, kulit lumpia tahu, tepung panir sesuai 
+                masing-masing jenis produk serta dipastikan tidak menggunakan bahan pengawet dan MSG 
+                sehingga menghasilkan dimsum yg lembut dan kualitas terbaik serta rasa yang 
+                sangat disukai berbagai kalangan dan usia. Sangat cocok dijadikan 
+                cemilan ataupun lauk sebagai pelengkap menu sehat dan bergizi keluarga Anda.</p>
         </div>
     </div>
     <div id="portofolio">
-        <h1 class="title-portofolio">Foto Produk</h1>
+        <h1 class="title-portofolio">Jenis Produk</h1>
         <div class="container">
             <div class="gambar menu">
+                <p class="nama-produk"><u>1. Dimsum original (DB.001)</u></p>
                 <img src="./Bahan/Foto/gambar 1.jpeg" alt="iconAvatar.svg" class="img-icon">
-                <p class="deskripsi"><u>Dimsum ayam 5 toping (tuna,sosis,jamur,kepiting,wortel)</u><br>
-                    <br>
+                <p class="deskripsi">
                     Dimsum dgn kualitas terbaik dengan bahan² kualitas premium non MSG cocok utk segala usia,<br>
                     terutama untuk anak². Bisa untuk cemilan dan bekal sekolah buah hati tercinta.<br>
                     <br>
                     Terbuat dari : Dada fillet ayam fresh (non kulit), kulit dimsum dll.</p>
             </div>
-           <br>
-           <br>
-           <br>
+                <br>
+                <br>
+                <br>
+           <div class="gambar menu">
+            <p class="nama-produk"><u>2. Kekian Original (DB.002)</u></p>
+            <img src="./Bahan/Foto/gambar 4.jpeg" alt="iconAvatar.svg" class="img-icon">
+            <p class="deskripsi">
+                Lumpia yg bisa disajikan dengan cara dikukus atau digoreng.<br>
+                Rasanya yg sangat diminati oleh semua usia bisa disajikan sebagai<br> 
+                cemilan dan lauk. Non MSG.<br>
+                <br>
+                Terbuat dari : Olahan dasar dimsum, sayuran, kulit tahu dll.</p>
+            </div>
+                <br>
+                <br>
+                <br>
             <div class="gambar menu">
-                <img src="./Bahan/Foto/gambar 2.jpeg" alt="iconAvatar.svg" class="img-icon">
-                <p class="deskripsi"><u>Kekian Nori (Rumput Laut)</u><br>
+                <p class="nama-produk"><u>3. Dimsum udang (DB.003)</u></p>
+                <img src="./Bahan/Foto/gambar 3.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi">
+                    Udang yg dibalut dengan olahan dimsum sangat digemari pencinta Sea Food. Non MSG.<br>
                     <br>
+                    Terbuat dari : Bahan dasar Dimsum, Udang, kulit Dimsum dll.</p>
+            </div>
+                <br>
+                <br>
+                <br>
+            <div class="gambar menu">
+                <p class="nama-produk"><u>4. Kekian Nori (DB.004)</u></p>
+                <img src="./Bahan/Foto/gambar 2.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi">
                     Olahan ayam dibalut rumput laut ditambah bumbu rempah yang sangat menggugah selera<br>
                     dapat disajikan  sebagai cemilan dan lauk untuk berbagai macam usia. Non MSG<br>
                     <br>
                     Terbuat dari : bahan dasar olahan dimsum, telur,<br> 
                     rumput laut (sebagai kulit pembungkus), rempah² dll.</p>
             </div>
-            <br>
-            <br>
-            <br>
+                <br>
+                <br>
+                <br>
             <div class="gambar menu">
-                <img src="./Bahan/Foto/gambar 3.jpeg" alt="iconAvatar.svg" class="img-icon">
-                <p class="deskripsi"><u>Dimsum Udang</u><br>
-                    <br>
-                    Udang yg dibalut dengan olahan dimsum sangat digemari pencinta Sea Food. Non MSG.<br>
-                    <br>
-                    Terbuat dari : Bahan dasar Dimsum, Udang, kulit Dimsum dll.</p>
-            </div>
-            <br>
-            <br>
-            <br>
-            <div class="gambar menu">
-                <img src="./Bahan/Foto/gambar 4.jpeg" alt="iconAvatar.svg" class="img-icon">
-                <p class="deskripsi"><u>Kekian Lumpia Kulit Tahu</u><br>
-                    <br>
-                    Lumpia yg bisa disajikan dengan cara dikukus atau digoreng.<br>
-                    Rasanya yg sangat diminati oleh semua usia bisa disajikan sebagai<br> 
-                    cemilan dan lauk. Non MSG.<br>
-                    <br>
-                    Terbuat dari : Olahan dasar dimsum, sayuran, kulit tahu dll.</p>
-            </div>
-            <br>
-            <br>
-            <br>
-            <div class="gambar menu">
-                <img src="./Bahan/Foto/gambar 5.jpeg" alt="iconAvatar.svg" class="img-icon">
-                <p class="deskripsi"><u>Dimsum Nuget</u><br> 
-                    <br>
-                    Produk olahan dimsum berbentuk nuget sangat dicocok sebagai lauk untuk anak².<br>
-                    Disajikan dengan cara digoreng sangat digemari oleh anak². Non MSG<br>
-                    <br>
-                    Terbuat dari : Bahan dasar olahan dimsum, telur, tepung panir dll.</p>
-            </div>
-            <br>
-            <br>
-            <br>
-            <div class="gambar menu">
+                <p class="nama-produk"><u>5. Dimsum Nori (DB.005)</u></p>
                 <img src="./Bahan/Foto/gambar 6.jpeg" alt="iconAvatar.svg" class="img-icon">
-                <p class="deskripsi"><u>Dimsum Nori</u><br> 
-                    <br>
+                <p class="deskripsi">
                     Dimsum yang dibalut dengan nori (rumput laut) sangat digemari oleh anak².<br> 
                     Bisa untuk bekal sekolah anak. Non MSG<br>
                     <br>
                     Terbuat dari : Olahan dasar Dimsum, rumput laut (kulit pembungkus dimsum) dll</p>
+            </div>
+                <br>
+                <br>
+                <br>
+            <div class="gambar menu">
+                <p class="nama-produk"><u>6. Dimsum Nuget (DB.006)</u></p>
+                <img src="./Bahan/Foto/gambar 5.jpeg" alt="iconAvatar.svg" class="img-icon">
+                <p class="deskripsi">
+                    Produk olahan dimsum berbentuk nuget sangat dicocok sebagai lauk untuk anak².<br>
+                    Disajikan dengan cara digoreng sangat digemari oleh anak². Non MSG<br>
+                    <br>
+                    Terbuat dari : Bahan dasar olahan dimsum, telur, tepung panir dll.</p>
             </div>
         </div>
     </div>
@@ -127,26 +125,21 @@
         </form>
         <div class="contact-info">
             <h3 class="non-desktop">
-                Klik salah satu untuk mendapat info
+                Klik salah satu untuk memesan produk
             </h3>
             <div>
-                <a href="https://wa.link/vxmec3" class="contact-icon-bundler">
-                    <img src="./Bahan/Foto/png-transparent-white-telephone.png" alt="phone.png" class="contact-icon">
-                    <span class="contact-desktop">+62 812-8648-348 ( Order Disini )</span>
+                <a href="https://wa.link/nrtvqv" class="contact-icon-bundler">
+                    <img src="./Bahan/Foto/png-transparent-whatssapp.png" alt="phone.png" class="contact-icon">
+                    <span class="contact-desktop">+62 812-8648-348</span>
                 </a>
             </div>
             <div>
-                <a href="mailto:someone@example.com" class="contact-icon-bundler">
-                    <img src="./Bahan/Foto/png-transparent-gmail.png" alt="mail.png" class="contact-icon">
-                    <span class="contact-desktop">hafizhabibie17@gmail.com</span>
+                <a href="https://wa.link/f77oz4" class="contact-icon-bundler">
+                    <img src="./Bahan/Foto/png-transparent-whatssapp.png" alt="phone.png" class="contact-icon">
+                    <span class="contact-desktop">+62 812-8703-072</span>
                 </a>
             </div>
-            <div>
-                <a href="https://www.linkedin.com/in/williamhgates"  class="contact-icon-bundler">
-                    <img src="./Bahan/Foto/kisspng-youtube-logo.jpg.png" alt="in.png" class="contact-icon">
-                    <span class="contact-desktop">HLIABIE</span>
-                </a>
-            </div>
+            
         </div>
     </div>
     <footer>
