--- a/versi 1/index.html
+++ b/versi 1/index.html
@@ -129,13 +129,13 @@
             </h3>
             <div>
                 <a href="https://wa.link/nrtvqv" class="contact-icon-bundler">
-                    <img src="./Bahan/Foto/png-transparent-whatssapp.png" alt="phone.png" class="contact-icon">
+                    <img src="./Bahan/Foto/whatssapp bunda.png" alt="phone.png" class="contact-icon">
                     <span class="contact-desktop">+62 812-8648-348</span>
                 </a>
             </div>
             <div>
                 <a href="https://wa.link/f77oz4" class="contact-icon-bundler">
-                    <img src="./Bahan/Foto/png-transparent-whatssapp.png" alt="phone.png" class="contact-icon">
+                    <img src="./Bahan/Foto/whatssapp papa.png" alt="phone.png" class="contact-icon">
                     <span class="contact-desktop">+62 812-8703-072</span>
                 </a>
             </div>
