--- a/versi 1/index.html
+++ b/versi 1/index.html
@@ -106,6 +106,15 @@
         </div>
     </div>
     <hr>
+    <br>
+    <div class="container">
+        <div class="vertical-center">
+            <p><b>Berminat? Langsung Klik Tombol Dibawah ini</b></p>
+            <a class="send_form" href="https://whatsform.com/W5IN9-" type="submit" title="Send to Whatsapp">Order Disini</a>
+        </div>
+    </div>
+    <br>
+    <hr>
     <div id="contact-us">
         <h1 class="title-contact-us">Kontak Kami</h1>
         <form action="" class="form-contact-us">
@@ -125,7 +134,7 @@
         </form>
         <div class="contact-info">
             <h3 class="non-desktop">
-                Klik salah satu untuk memesan produk
+                Klik salah satu untuk mengontak
             </h3>
             <div>
                 <a href="https://wa.link/nrtvqv" class="contact-icon-bundler">
