--- a/versi 1/index.html
+++ b/versi 1/index.html
@@ -16,6 +16,7 @@
         <li class="nav-icon desktop"><img src="./Bahan/Foto/logo dimsum.png" alt="iconAvatar.svg"></li>
         <li><a href="#about-me">Tentang Kami</a></li>
         <li><a href="#portofolio">Jenis Produk</a></li>
+        <li><a href="#order">Order Dimsum</a></li>
         <li><a href="#contact-us">Kontak Kami</a></li>
     </ul>
     <div id="about-me">
@@ -107,12 +108,18 @@
     </div>
     <hr>
     <br>
-    <div class="container">
-        <div class="vertical-center">
-            <p><b>Berminat? Langsung Klik Tombol Dibawah ini</b></p>
-            <a class="send_form" href="https://whatsform.com/W5IN9-" type="submit" title="Send to Whatsapp">Order Disini</a>
+    <br>
+    <br>
+    <div id="order">
+        <div class="container">
+            <div class="vertical-center">
+                <p><b>Berminat? Langsung Klik Tombol Dibawah ini</b></p>
+                <a class="send_form" href="https://whatsform.com/W5IN9-" type="submit" title="Send to Whatsapp">Order Disini</a>
+            </div>
         </div>
     </div>
+    <br>
+    <br>
     <br>
     <hr>
     <div id="contact-us">
