--- a/versi 1/index.html
+++ b/versi 1/index.html
@@ -106,18 +106,17 @@
             </div>
         </div>
     </div>
+    <div id="order"></div>
     <hr>
     <br>
     <br>
     <br>
-    <div id="order">
         <div class="container">
             <div class="vertical-center">
                 <p><b>Berminat? Langsung Klik Tombol Dibawah ini</b></p>
                 <a class="send_form" href="https://whatsform.com/W5IN9-" type="submit" title="Send to Whatsapp">Order Disini</a>
             </div>
         </div>
-    </div>
     <br>
     <br>
     <br>
