--- a/versi 1/index.html
+++ b/versi 1/index.html
@@ -6,6 +6,7 @@
     <title>Website Dimsum Boenda Dewi</title>
     <link rel="stylesheet" href="./Dimsum.css">
     <link href="" rel="stylesheet">
+    <link rel="shortcut icon" type="x-icon" href="./Bahan/Foto/logo dimsum.png">
 </head>
 <body>
     <div id="landing-page">
